--- a/index.html
+++ b/index.html
@@ -169,26 +169,40 @@
                     </div>
                 </section>
 
-                <!-- Detailed Skills -->
+                <!-- Magic Behind Skills -->
                 <section id="skills" class="info-block reveal-card">
-                    <h3 class="section-label">Tech Stack</h3>
-                    <div class="skills-table">
-                        <div class="skill-row">
-                            <span class="s-cat">Languages</span>
-                            <div class="s-list">Java, Python, C/C++, JavaScript, SQL, HTML/CSS</div>
-                        </div>
-                        <div class="skill-row">
-                            <span class="s-cat">Frameworks & Libs</span>
-                            <div class="s-list">Spring Boot, React (Learning), JUnit, Bootstrap, Tailwind</div>
-                        </div>
-                        <div class="skill-row">
-                            <span class="s-cat">Tools & DevOps</span>
-                            <div class="s-list">Git/GitHub, Maven, Docker, IntelliJ IDEA, VS Code</div>
-                        </div>
-                        <div class="skill-row">
-                            <span class="s-cat">Data & AI</span>
-                            <div class="s-list">Pandas, NumPy, Scikit-learn, Matplotlib, OCR</div>
-                        </div>
+                    <div class="skills-header-center">
+                        <span class="section-label">My Skillset</span>
+                        <h2 class="magic-title">It<span class="gradient-text"> Knowledge</span></h2>
+                    </div>
+
+                    <div class="skills-pill-grid">
+                        <!-- Frontend -->
+                        <div class="skill-pill"><i class="ri-reactjs-line"></i> ReactJS</div>
+                        <div class="skill-pill"><i class="ri-html5-fill"></i> HTML5</div>
+                        <div class="skill-pill"><i class="ri-css3-fill"></i> CSS3</div>
+                        <div class="skill-pill"><i class="ri-javascript-fill"></i> JavaScript</div>
+                        <div class="skill-pill"><i class="ri-bootstrap-fill"></i> Bootstrap</div>
+                        <div class="skill-pill"><i class="ri-tailwind-css-fill"></i> Tailwind</div>
+
+                        <!-- Backend & DB -->
+                        <div class="skill-pill"><i class="ri-java-fill"></i> Java</div>
+                        <div class="skill-pill"><i class="ri-spring-fill"></i> Spring Boot</div>
+                        <div class="skill-pill"><i class="ri-database-2-fill"></i> SQL</div>
+                        <div class="skill-pill"><i class="ri-file-code-fill"></i> Python</div>
+                        <div class="skill-pill"><i class="ri-terminal-box-fill"></i> C/C++</div>
+
+                        <!-- Tools & DevOps -->
+                        <div class="skill-pill"><i class="ri-git-merge-fill"></i> Git</div>
+                        <div class="skill-pill"><i class="ri-github-fill"></i> GitHub</div>
+                        <div class="skill-pill"><i class="ri-docker-fill"></i> Docker</div>
+                        <div class="skill-pill"><i class="ri-code-s-slash-fill"></i> VS Code</div>
+                        <div class="skill-pill"><i class="ri-hammer-fill"></i> Maven</div>
+
+                        <!-- Data & AI -->
+                        <div class="skill-pill"><i class="ri-bar-chart-fill"></i> Pandas</div>
+                        <div class="skill-pill"><i class="ri-brain-fill"></i> NumPy</div>
+                        <div class="skill-pill"><i class="ri-robot-fill"></i> Scikit-learn</div>
                     </div>
                 </section>
 
