Add Blog Section

--- a/index.html
+++ b/index.html
@@ -278,6 +278,45 @@
                     </article>
 
                 </section>
+
+                <!-- Blog / Writing Section -->
+                <section id="blog" class="blog-list">
+                    <h3 class="section-label" data-i18n="blog_section">Latest Writings</h3>
+
+                    <div class="blog-grid">
+                        <!-- Article 1 -->
+                        <article class="blog-card reveal-card">
+                            <div class="blog-icon">
+                                <i class="ri-article-line"></i>
+                            </div>
+                            <div class="blog-content">
+                                <span class="blog-date">Oct 12, 2025</span>
+                                <h4 data-i18n="blog_1_title">Mastering GSAP Animations</h4>
+                                <p data-i18n="blog_1_desc">A deep dive into creating smooth, high-performance web
+                                    animations using GreenSock.</p>
+                                <a href="#" class="read-more magnetic-btn"><span data-i18n="read_more">Read
+                                        Article</span> <i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </article>
+
+                        <div class="divider-horizontal"></div>
+
+                        <!-- Article 2 -->
+                        <article class="blog-card reveal-card">
+                            <div class="blog-icon">
+                                <i class="ri-terminal-window-line"></i>
+                            </div>
+                            <div class="blog-content">
+                                <span class="blog-date">Sep 28, 2025</span>
+                                <h4 data-i18n="blog_2_title">Building a Home Lab</h4>
+                                <p data-i18n="blog_2_desc">How I set up my personal Cyber Range for testing network
+                                    security protocols.</p>
+                                <a href="#" class="read-more magnetic-btn"><span data-i18n="read_more">Read
+                                        Article</span> <i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </article>
+                    </div>
+                </section>
             </div>
         </div>
 
@@ -288,7 +327,7 @@
                     <p>&copy; 2026 Safaa Faraji. <span data-i18n="footer_text">Built with precision.</span></p>
                     <div class="socials-footer">
                         <a href="mailto:safaa.faraji.fm@gmail.com">Email</a>
-                        <a href="https://www.linkedin.com/in/safaa-faraji-858a263a9" target="_blank">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/safaa-faraji" target="_blank">LinkedIn</a>
                         <a href="https://github.com/safaafaraji" target="_blank">GitHub</a>
                     </div>
                 </div>
